...
    <!-- MedicationActivity titles -->
    <string name="add_medication">New medicine</string>
    <string name="edit_medication">%s</string>

    <!-- Buttons -->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!-- Errors -->
    <string name="err_dosage_already_added">Dosage already added for that time.</string>

    <!-- Treatment -->
    <string name="treatment_recurring_none">Not recurring</string>
...
    <string name="prefcat_title_treatment_recurring">Recurring</string>
    <string name="pref_title_treatment_repeating">Treatment cycle recurring</string>

    <!-- Medication -->
    <string name="medication_starting_immediately">Do not delay</string>
    <string name="medication_starting_after_period">Delay for certain period</string>
    <string name="medication_repeating_everyday">Everyday</string>
    <string name="medication_repeating_every_n_days">Every n days</string>
    <string name="medication_repeating_days_of_week">Days of week</string>
    <string name="medication_reminding_certain_hours">At certain hours</string>
    <string name="medication_reminding_every_n_hours">Every n hours</string>
    <string name="medication_stopping_with_cycle">Do not stop (unless treatment cycle ends)</string>
    <string name="medication_stopping_after_period">Stop after certain period</string>
    <string name="to_string_everyday">everyday</string>
    <string name="to_string_medication_repeating_every_n_days">every %d days</string>
    <string name="to_string_medication_repeating_days_of_week">every week on %s</string>
    <string name="to_string_starting_immediately">Do not delay</string>
    <string name="to_string_stopping_after_period">Stop in %s</string>

    <!-- Medication preference titles & summaries-->
    <string name="prefcat_title_medication_basics">Basics</string>
    <string name="pref_title_medication_name">Name</string>
    <string name="pref_title_medication_manufacturer">Manufacturer</string>
    <string name="pref_title_dosage_form">Form</string>
    <string name="prefcat_title_medication_strategies">Intakes</string>
    <string name="pref_title_medication_starting">Starts</string>
    <string name="pref_title_medication_repeating">On which days</string>
    <string name="pref_title_medication_reminding">On which hours of day</string>
    <string name="prefcat_title_medication_repeating">Repeating model</string>
    <string name="prefcat_title_medication_reminding">Reminding model</string>
...
