<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:maxLines="1"
                    android:text="Take" />

                <NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:maxLines="1"
                    android:text="at" />

                <name.leesah.nirvana.ui.widget.LimitedMinutesTimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:timePickerMode="spinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_button"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>


