...
            android:title="@string/pref_title_dosage_form" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefcat_title_medication_reminding_and_repeating">
        <Preference
            android:key="@string/pref_key_medication_repeating_model"
            android:title="@string/pref_title_medication_repeating_model" />

        <Preference
            android:key="@string/pref_key_medication_reminding_model"
            android:title="@string/pref_title_medication_reminding_model" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_medication_advanced">
        <SwitchPreference
            android:defaultValue="false"
...
