<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_an_intake"
                android:textAlignment="center" />

        </FrameLayout>

        <name.leesah.nirvana.ui.widget.TimedDosageEditorCard
            android:id="@+id/editor_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mode="add" />
    </LinearLayout>

    <ListView
        android:id="@+id/dosages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:divider="@null"
        android:footerDividersEnabled="false"
        tools:context=".ui.medication.reminding.CertainHoursEditFragment"
        tools:listfooter="@layout/timed_dosage_editor_card"
        tools:listitem="@layout/timed_dosage_card" />

</FrameLayout>
