...

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/dosage_form_tablets"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
...
            android:layout_margin="4dp"
            android:text="every"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="70dp" />

        <NumberPicker
            android:id="@+id/every_n"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_margin="4dp"
            tools:layout_editor_absoluteX="252dp"
            tools:layout_editor_absoluteY="16dp" />

...
